# pipeline-etl-sancoes

./: .gitignore  LICENSE  airflow.cfg  dag.py  pyproject.toml
data_raw/acordo_leniencia/: acordo_leniencia_092023.json  acordo_leniencia_102023.json
data_raw/cepim/: cepim_092023.json  cepim_102023.json
data_raw/cnep/: cnep_092023.json  cnep_102023.json
etl/: config.py  dag.py  dag_acordo_leniencia.py  dag_ceis.py  dag_cepim.py  dag_cnep.py  extract_data.py  load_data.py  transform_data.py
sql/inserts/acordo_leniencia/: acordo_leniencia_092023.sql  acordo_leniencia_102023.sql
sql/inserts/cepim/: cepim_092023.sql  cepim_102023.sql
sql/inserts/cnep/: cnep_092023.sql  cnep_102023.sql
sql/tables/: create_table_acordo_leniencia.sql  create_table_ceis.sql  create_table_cepim.sql  create_table_cnep.sql
