[tool.poetry]
name = "pipeline-etl-sancoes"
version = "0.1.0"
description = "Project about ETL the sanctions data gorvernment brazilian"
authors = ["wagnergbriel <wagnergabriel220596@gmail.com>"]
readme = "README.md"
packages = [{include = "pipeline_etl_sancoes"}]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.7.1"
pandas = "2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
